--- a/sales.html
+++ b/sales.html
@@ -4,15 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-
-        </nav>
+    <header class="header">
+        <p><em>Welcome to Pat's Salmon Cookies!</em></p>
     </header>
-
-
+        
+        <nav>
+            <a href="index.html">
+                <button>Home</button>
+            </a>
+            <a href="sales.html">
+                <button>Sales</button>
+            </a>
+        </nav>
 
 
     <footer>
