added new location objects and gave custom identifiers to elements

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
+    
     <header class="header">
         <p>
             Welcome to pat's Salmon Cookies!
         </p>
     </header>
-<nav class="nav">
+        <nav class="nav">
             <a href="index.html">
                 <button>Home</button>
             </a>
@@ -23,8 +24,24 @@
                 <button>Sales</button>
             </a>
         </nav>
- 
-        <img src="images/image.png">
+ <img src="images/image.png">
+        <section class="store-Info">
+            <h2>Seattle</h2>
+            <p>68523 Damienwzhere</p>
+            <p>555-1212</p>
+        </section>
+
+        <section class="store-Info">
+            <h2>Tokyo</h2>
+            <p>4458 Urmom Ave</p>
+            <p>555-1313</p>
+        </section>
+        
+        <section class="store-Info">
+            <h2>Paris</h2>
+            <p>123 playground stret</p>
+            <p>555-1414</p>
+        </section>
 
 
     <footer>
