--- a/sales.html
+++ b/sales.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
@@ -14,7 +15,7 @@
         <p><em>Welcome to Pat's Salmon Cookies!</em></p>
     </header>
         
-        <nav>
+        <nav class="nav">
             <a href="index.html">
                 <button>Home</button>
             </a>
@@ -22,10 +23,21 @@
                 <button>Sales</button>
             </a>
         </nav>
+    <div class="fish-Container">
+        <img src="images/image.png" alt="Picture of a Salmon" class="fish">
+    </div>
+
+        <main>
+            <section class="content">
+                <table id="sales-table"></table>
+            </section>
+        </main>
+
 
 
     <footer>
-        
+         <p>&copy; 2026 Pat's Salmon Cookies</p>
     </footer>
+    <script src="app.js"></script>
 </body>
 </html>
